--- a/docs/professor/karina_dias_espartosa.mdx
+++ b/docs/professor/karina_dias_espartosa.mdx
@@ -113,11 +113,11 @@ export const data = {
             "Karina Dias Espartosa",
             "Gabriele Antico Freiria"
           ],
-          classroom: "Laboratório de Biologia",
+          classroom: "Sala 15-2",
           students: [
             "IIW2023A"
           ],
-          time: "08:20 - 09:10"
+          time: "10:15 - 11:05"
         }
       ]
     },
