--- a/docs/sala/bloco_1/laboratorio_de_computacao_aplicada.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_computacao_aplicada.mdx
@@ -115,6 +115,18 @@ export const data = {
             "TADS_ESP"
           ],
           time: "19:00 - 19:50"
+        },
+        {
+          subject: "Projeto Integrador II",
+          size: 2,
+          teachers: [
+            "Eduardo Alberto Felippsen"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: [
+            "IIW2023A"
+          ],
+          time: "08:20 - 09:10"
         }
       ]
     },
