--- a/docs/turma/iiw/iiw2023a.mdx
+++ b/docs/turma/iiw/iiw2023a.mdx
@@ -147,11 +147,11 @@ export const data = {
           teachers: [
             "Eduardo Alberto Felippsen"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Laboratório de Computação Aplicada",
           students: [
             "IIW2023A"
           ],
-          time: "07:30 - 08:20"
+          time: "08:20 - 09:10"
         },
         {
           subject: "História II",
@@ -163,7 +163,7 @@ export const data = {
           students: [
             "IIW2023A"
           ],
-          time: "09:25 - 10:15"
+          time: "07:30 - 08:20"
         },
         {
           subject: "Língua Portuguesa e Literatura II",
@@ -192,7 +192,7 @@ export const data = {
           students: [
             "IIW2023A"
           ],
-          time: "10:15 - 11:05"
+          time: "07:30 - 08:20"
         },
         {
           subject: "História II",
@@ -204,7 +204,7 @@ export const data = {
           students: [
             "IIW2023A"
           ],
-          time: "07:30 - 08:20"
+          time: "09:25 - 10:15"
         },
         {
           subject: "Biologia II",
@@ -213,11 +213,11 @@ export const data = {
             "Karina Dias Espartosa",
             "Gabriele Antico Freiria"
           ],
-          classroom: "Laboratório de Biologia",
+          classroom: "Sala 15-2",
           students: [
             "IIW2023A"
           ],
-          time: "08:20 - 09:10"
+          time: "10:15 - 11:05"
         }
       ]
     },
