--- a/docs/professor/eduardo_alberto_felippsen.mdx
+++ b/docs/professor/eduardo_alberto_felippsen.mdx
@@ -21,11 +21,11 @@ export const data = {
           teachers: [
             "Eduardo Alberto Felippsen"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Laboratório de Computação Aplicada",
           students: [
             "IIW2023A"
           ],
-          time: "07:30 - 08:20"
+          time: "08:20 - 09:10"
         }
       ]
     },
@@ -42,7 +42,7 @@ export const data = {
           students: [
             "IIW2024A"
           ],
-          time: "07:30 - 08:20"
+          time: "10:15 - 11:05"
         },
         {
           subject: "Trabalho de Conclusão de Curso",
