--- a/docs/professor/gabriele_antico_freiria.mdx
+++ b/docs/professor/gabriele_antico_freiria.mdx
@@ -79,7 +79,7 @@ export const data = {
           students: [
             "IIW2024A"
           ],
-          time: "10:15 - 11:05"
+          time: "08:20 - 09:10"
         },
         {
           subject: "Genética básica e humana",
@@ -112,11 +112,11 @@ export const data = {
             "Karina Dias Espartosa",
             "Gabriele Antico Freiria"
           ],
-          classroom: "Laboratório de Biologia",
+          classroom: "Sala 15-2",
           students: [
             "IIW2023A"
           ],
-          time: "08:20 - 09:10"
+          time: "10:15 - 11:05"
         }
       ]
     },
