--- a/docs/sala/bloco_1/laboratorio_de_informatica_a.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_informatica_a.mdx
@@ -54,20 +54,7 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Projeto Integrador II",
-          size: 2,
-          teachers: [
-            "Eduardo Alberto Felippsen"
-          ],
-          classroom: "Laboratório de Informatica A",
-          students: [
-            "IIW2023A"
-          ],
-          time: "07:30 - 08:20"
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
