--- a/docs/sala/bloco_2/sala_15-2.mdx
+++ b/docs/sala/bloco_2/sala_15-2.mdx
@@ -162,7 +162,7 @@ export const data = {
           students: [
             "IIW2023A"
           ],
-          time: "09:25 - 10:15"
+          time: "07:30 - 08:20"
         },
         {
           subject: "Língua Portuguesa e Literatura II",
@@ -191,7 +191,7 @@ export const data = {
           students: [
             "IIW2023A"
           ],
-          time: "10:15 - 11:05"
+          time: "07:30 - 08:20"
         },
         {
           subject: "História II",
@@ -203,7 +203,7 @@ export const data = {
           students: [
             "IIW2023A"
           ],
-          time: "07:30 - 08:20"
+          time: "09:25 - 10:15"
         },
         {
           subject: "Tecnologia de carnes e derivados II",
@@ -240,6 +240,19 @@ export const data = {
             "TAL2023"
           ],
           time: "19:50 - 20:40"
+        },
+        {
+          subject: "Biologia II",
+          size: 2,
+          teachers: [
+            "Karina Dias Espartosa",
+            "Gabriele Antico Freiria"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "IIW2023A"
+          ],
+          time: "10:15 - 11:05"
         }
       ]
     },
