--- a/docs/professor/alex_soares_de_brito.mdx
+++ b/docs/professor/alex_soares_de_brito.mdx
@@ -44,7 +44,7 @@ export const data = {
       dayClasses: [
         {
           subject: "Física III",
-          size: 3,
+          size: 2,
           teachers: [
             "Alex Soares de Brito"
           ],
@@ -57,7 +57,7 @@ export const data = {
         },
         {
           subject: "Física II",
-          size: 2,
+          size: 3,
           teachers: [
             "Alex Soares de Brito"
           ],
@@ -65,7 +65,7 @@ export const data = {
           students: [
             "AGO2023"
           ],
-          time: "10:15 - 11:05",
+          time: "09:25 - 10:15",
           color: ""
         }
       ]
@@ -85,15 +85,10 @@ export const data = {
           ],
           time: "07:30 - 08:20",
           color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Sexta-Feira",
-      dayClasses: [
+        },
         {
           subject: "Física I",
-          size: 2,
+          size: 3,
           teachers: [
             "Alex Soares de Brito"
           ],
@@ -101,10 +96,14 @@ export const data = {
           students: [
             "AGO2024"
           ],
-          time: "09:25 - 10:15",
+          time: "11:05 - 11:55",
           color: ""
         }
       ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: []
     }
   ],
   time: [
