--- a/docs/professor/danilo_hungaro_micheletti.mdx
+++ b/docs/professor/danilo_hungaro_micheletti.mdx
@@ -12,19 +12,6 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Segurança do Trabalho",
-          size: 1,
-          teachers: [
-            "Danilo Hungaro Micheletti"
-          ],
-          classroom: "Sala 12-2",
-          students: [
-            "EIN2022"
-          ],
-          time: "08:20 - 09:10",
-          color: ""
-        },
-        {
           subject: "Equipamentos elétricos e Sistema elétricos de potência",
           size: 4,
           teachers: [
@@ -48,7 +35,7 @@ export const data = {
           teachers: [
             "Danilo Hungaro Micheletti"
           ],
-          classroom: "Laboratório de Informatica C",
+          classroom: "Laboratório de Informatica A",
           students: [
             "ELE2023"
           ],
@@ -78,6 +65,19 @@ export const data = {
     {
       dayName: "Sexta-Feira",
       dayClasses: [
+        {
+          subject: "Segurança do Trabalho",
+          size: 2,
+          teachers: [
+            "Danilo Hungaro Micheletti"
+          ],
+          classroom: "Sala 12-2",
+          students: [
+            "EIN2022"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
         {
           subject: "Projetos e Instalações Elétricas",
           size: 2,
