--- a/docs/professor/jael_dos_santos.mdx
+++ b/docs/professor/jael_dos_santos.mdx
@@ -8,6 +8,19 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
+          subject: "História II",
+          size: 1,
+          teachers: [
+            "Jael dos Santos"
+          ],
+          classroom: "Sala 02 - CR Toledo",
+          students: [
+            "IIW2023B"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
           subject: "História III",
           size: 3,
           teachers: [
@@ -17,20 +30,7 @@ export const data = {
           students: [
             "IIW2022B"
           ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
-          subject: "História I",
-          size: 1,
-          teachers: [
-            "Jael dos Santos"
-          ],
-          classroom: "Sala 01 - CR Toledo",
-          students: [
-            "IIW2024B"
-          ],
-          time: "13:10 - 14:00",
+          time: "09:25 - 10:15",
           color: ""
         }
       ]
@@ -102,32 +102,46 @@ export const data = {
           ],
           time: "11:05 - 11:55",
           color: ""
-        },
-        {
-          subject: "História II",
-          size: 1,
-          teachers: [
-            "Jael dos Santos"
-          ],
-          classroom: "Sala 02 - CR Toledo",
-          students: [
-            "IIW2023B"
-          ],
-          time: "14:00 - 14:50",
-          color: ""
         }
       ]
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "História I",
+          size: 1,
+          teachers: [
+            "Jael dos Santos"
+          ],
+          classroom: "Sala 01 - CR Toledo",
+          students: [
+            "IIW2024B"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "História II",
+          subject: "História I",
           size: 1,
+          teachers: [
+            "Jael dos Santos"
+          ],
+          classroom: "Sala 01 - CR Toledo",
+          students: [
+            "IIW2024B"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "História II",
+          size: 2,
           teachers: [
             "Jael dos Santos"
           ],
@@ -135,7 +149,7 @@ export const data = {
           students: [
             "IIW2023B"
           ],
-          time: "11:05 - 11:55",
+          time: "10:15 - 11:05",
           color: ""
         },
         {
@@ -170,8 +184,21 @@ export const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "História II",
+          subject: "História I",
           size: 1,
+          teachers: [
+            "Jael dos Santos"
+          ],
+          classroom: "Sala 01 - CR Toledo",
+          students: [
+            "IIW2024B"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "História II",
+          size: 2,
           teachers: [
             "Jael dos Santos"
           ],
