--- a/docs/professor/juliano_da_rocha_queiroz.mdx
+++ b/docs/professor/juliano_da_rocha_queiroz.mdx
@@ -13,11 +13,11 @@ export const data = {
       dayClasses: [
         {
           subject: "Eletrônica",
-          size: 2,
+          size: 3,
           teachers: [
             "Juliano da Rocha Queiroz"
           ],
-          classroom: "Sala 13-2",
+          classroom: "Laboratório de Eletricidade e Eletrônica B4",
           students: [
             "EIN2023"
           ],
