--- a/docs/professor/leandro_luiz_borges.mdx
+++ b/docs/professor/leandro_luiz_borges.mdx
@@ -23,6 +23,19 @@ export const data = {
           ],
           time: "07:30 - 08:20",
           color: ""
+        },
+        {
+          subject: "Biologia III",
+          size: 2,
+          teachers: [
+            "Leandro Luiz Borges"
+          ],
+          classroom: "Sala 03 - CR Toledo",
+          students: [
+            "IIW2022B"
+          ],
+          time: "15:05 - 15:55",
+          color: ""
         }
       ]
     },
@@ -31,7 +44,7 @@ export const data = {
       dayClasses: [
         {
           subject: "Biologia 4",
-          size: 2,
+          size: 3,
           teachers: [
             "Leandro Luiz Borges"
           ],
