--- a/docs/professor/michelli_cristina_galli.mdx
+++ b/docs/professor/michelli_cristina_galli.mdx
@@ -12,19 +12,6 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Língua Portuguesa e Literatura I",
-          size: 2,
-          teachers: [
-            "Michelli Cristina Galli"
-          ],
-          classroom: "Sala 7-2",
-          students: [
-            "AGO2024"
-          ],
-          time: "11:05 - 11:55",
-          color: ""
-        },
-        {
           subject: "Língua Estrangeira Moderna - Espanhol",
           size: 1,
           teachers: [
@@ -34,7 +21,33 @@ export const data = {
           students: [
             "IIW2022A"
           ],
-          time: "15:05 - 15:55",
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Língua Portuguesa e Literatura I",
+          size: 2,
+          teachers: [
+            "Michelli Cristina Galli"
+          ],
+          classroom: "Sala 7-2",
+          students: [
+            "AGO2024"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        },
+        {
+          subject: "Língua Portuguesa e Literatura II",
+          size: 2,
+          teachers: [
+            "Michelli Cristina Galli"
+          ],
+          classroom: "Sala 6-2",
+          students: [
+            "AGO2023"
+          ],
+          time: "13:10 - 14:00",
           color: ""
         }
       ]
@@ -66,7 +79,7 @@ export const data = {
       dayClasses: [
         {
           subject: "Língua Portuguesa e Literatura II",
-          size: 2,
+          size: 3,
           teachers: [
             "Michelli Cristina Galli"
           ],
@@ -74,7 +87,7 @@ export const data = {
           students: [
             "AGO2023"
           ],
-          time: "09:25 - 10:15",
+          time: "07:30 - 08:20",
           color: ""
         }
       ]
