--- a/docs/professor/renato_lada_guerreiro.mdx
+++ b/docs/professor/renato_lada_guerreiro.mdx
@@ -47,7 +47,25 @@ export const data = {
           students: [
             "IIW2023B"
           ],
-          time: "11:05 - 11:55",
+          time: "09:25 - 10:15",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: [
+        {
+          subject: "Geografia I",
+          size: 1,
+          teachers: [
+            "Renato Lada Guerreiro"
+          ],
+          classroom: "Sala 02 - CR Toledo",
+          students: [
+            "IIW2023B"
+          ],
+          time: "09:25 - 10:15",
           color: ""
         },
         {
@@ -60,14 +78,10 @@ export const data = {
           students: [
             "IIW2022B"
           ],
-          time: "15:05 - 15:55",
+          time: "10:15 - 11:05",
           color: ""
         }
       ]
-    },
-    {
-      dayName: "Quarta-Feira",
-      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
