--- a/docs/professor/thais_cristina_dos_santos.mdx
+++ b/docs/professor/thais_cristina_dos_santos.mdx
@@ -8,19 +8,6 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Física I",
-          size: 2,
-          teachers: [
-            "Thais Cristina dos Santos"
-          ],
-          classroom: "Sala 01 - CR Toledo",
-          students: [
-            "IIW2024B"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
           subject: "Física III",
           size: 2,
           teachers: [
@@ -30,7 +17,20 @@ export const data = {
           students: [
             "IIW2022B"
           ],
-          time: "10:15 - 11:05",
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Física I",
+          size: 3,
+          teachers: [
+            "Thais Cristina dos Santos"
+          ],
+          classroom: "Sala 01 - CR Toledo",
+          students: [
+            "IIW2024B"
+          ],
+          time: "09:25 - 10:15",
           color: ""
         },
         {
@@ -131,6 +131,19 @@ export const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
+          subject: "Física 4",
+          size: 3,
+          teachers: [
+            "Thais Cristina dos Santos"
+          ],
+          classroom: "Laboratório de Física",
+          students: [
+            "EIN2021"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
           subject: "Física II",
           size: 2,
           teachers: [
@@ -140,7 +153,7 @@ export const data = {
           students: [
             "COM2023"
           ],
-          time: "07:30 - 08:20",
+          time: "10:15 - 11:05",
           color: ""
         },
         {
