--- a/docs/sala/bloco_1/laboratorio_de_fisica.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_fisica.mdx
@@ -73,7 +73,7 @@ export const data = {
       dayClasses: [
         {
           subject: "Física III",
-          size: 3,
+          size: 2,
           teachers: [
             "Alex Soares de Brito"
           ],
@@ -86,7 +86,7 @@ export const data = {
         },
         {
           subject: "Física II",
-          size: 2,
+          size: 3,
           teachers: [
             "Alex Soares de Brito"
           ],
@@ -94,7 +94,7 @@ export const data = {
           students: [
             "AGO2023"
           ],
-          time: "10:15 - 11:05",
+          time: "09:25 - 10:15",
           color: ""
         }
       ]
@@ -127,12 +127,38 @@ export const data = {
           ],
           time: "09:25 - 10:15",
           color: ""
+        },
+        {
+          subject: "Física I",
+          size: 3,
+          teachers: [
+            "Alex Soares de Brito"
+          ],
+          classroom: "Laboratório de Física",
+          students: [
+            "AGO2024"
+          ],
+          time: "11:05 - 11:55",
+          color: ""
         }
       ]
     },
     {
       dayName: "Sexta-Feira",
       dayClasses: [
+        {
+          subject: "Física 4",
+          size: 3,
+          teachers: [
+            "Thais Cristina dos Santos"
+          ],
+          classroom: "Laboratório de Física",
+          students: [
+            "EIN2021"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
         {
           subject: "Física II",
           size: 2,
@@ -143,20 +169,7 @@ export const data = {
           students: [
             "COM2023"
           ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
-          subject: "Física I",
-          size: 2,
-          teachers: [
-            "Alex Soares de Brito"
-          ],
-          classroom: "Laboratório de Física",
-          students: [
-            "AGO2024"
-          ],
-          time: "09:25 - 10:15",
+          time: "10:15 - 11:05",
           color: ""
         },
         {
