--- a/docs/sala/bloco_1/laboratorio_de_informatica_a.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_informatica_a.mdx
@@ -31,7 +31,21 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Projetos Elétricos industriais",
+          size: 4,
+          teachers: [
+            "Danilo Hungaro Micheletti"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "ELE2023"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Quinta-Feira",
