--- a/docs/turma/ago/ago2023.mdx
+++ b/docs/turma/ago/ago2023.mdx
@@ -41,6 +41,19 @@ export const data = {
           color: ""
         },
         {
+          subject: "Língua Portuguesa e Literatura II",
+          size: 2,
+          teachers: [
+            "Michelli Cristina Galli"
+          ],
+          classroom: "Sala 6-2",
+          students: [
+            "AGO2023"
+          ],
+          time: "13:10 - 14:00",
+          color: ""
+        },
+        {
           subject: "História I",
           size: 2,
           teachers: [
@@ -73,7 +86,7 @@ export const data = {
         },
         {
           subject: "Física II",
-          size: 2,
+          size: 3,
           teachers: [
             "Alex Soares de Brito"
           ],
@@ -81,7 +94,7 @@ export const data = {
           students: [
             "AGO2023"
           ],
-          time: "10:15 - 11:05",
+          time: "09:25 - 10:15",
           color: ""
         }
       ]
@@ -99,7 +112,38 @@ export const data = {
           students: [
             "AGO2023"
           ],
-          time: "08:20 - 09:10",
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Química II",
+          size: 3,
+          teachers: [
+            "Cosme Oliveira da Silva"
+          ],
+          classroom: "Sala 6-2",
+          students: [
+            "AGO2023"
+          ],
+          time: "09:25 - 10:15",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: [
+        {
+          subject: "Língua Portuguesa e Literatura II",
+          size: 3,
+          teachers: [
+            "Michelli Cristina Galli"
+          ],
+          classroom: "Sala 6-2",
+          students: [
+            "AGO2023"
+          ],
+          time: "07:30 - 08:20",
           color: ""
         },
         {
@@ -113,24 +157,6 @@ export const data = {
             "AGO2023"
           ],
           time: "10:15 - 11:05",
-          color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Língua Portuguesa e Literatura II",
-          size: 2,
-          teachers: [
-            "Michelli Cristina Galli"
-          ],
-          classroom: "Sala 6-2",
-          students: [
-            "AGO2023"
-          ],
-          time: "09:25 - 10:15",
           color: ""
         }
       ]
