--- a/docs/turma/ein/ein2023.mdx
+++ b/docs/turma/ein/ein2023.mdx
@@ -16,11 +16,11 @@ export const data = {
       dayClasses: [
         {
           subject: "Eletrônica",
-          size: 2,
+          size: 3,
           teachers: [
             "Juliano da Rocha Queiroz"
           ],
-          classroom: "Sala 13-2",
+          classroom: "Laboratório de Eletricidade e Eletrônica B4",
           students: [
             "EIN2023"
           ],
@@ -29,7 +29,7 @@ export const data = {
         },
         {
           subject: "Química 2",
-          size: 3,
+          size: 2,
           teachers: [
             "Sabrina Kerkhoff"
           ],
@@ -37,7 +37,7 @@ export const data = {
           students: [
             "EIN2023"
           ],
-          time: "09:25 - 10:15",
+          time: "10:15 - 11:05",
           color: ""
         }
       ]
@@ -91,7 +91,7 @@ export const data = {
       dayClasses: [
         {
           subject: "Cálculo Mecânico",
-          size: 2,
+          size: 3,
           teachers: [
             "Darlan Roque Dapieve"
           ],
@@ -156,12 +156,12 @@ export const data = {
           students: [
             "EIN2023"
           ],
-          time: "10:15 - 11:05",
+          time: "09:25 - 10:15",
           color: ""
         },
         {
           subject: "Metrologia",
-          size: 1,
+          size: 2,
           teachers: [
             "Sérgio Takahashi"
           ],
@@ -169,7 +169,7 @@ export const data = {
           students: [
             "EIN2023"
           ],
-          time: "11:05 - 11:55",
+          time: "10:15 - 11:05",
           color: ""
         }
       ]
