--- a/docs/professor/cosme_oliveira_da_silva.mdx
+++ b/docs/professor/cosme_oliveira_da_silva.mdx
@@ -13,7 +13,7 @@ export const data = {
       dayClasses: [
         {
           subject: "Química I",
-          size: 2,
+          size: 3,
           teachers: [
             "Cosme Oliveira da Silva"
           ],
@@ -35,7 +35,7 @@ export const data = {
       dayClasses: [
         {
           subject: "Química II",
-          size: 2,
+          size: 3,
           teachers: [
             "Cosme Oliveira da Silva"
           ],
@@ -43,7 +43,7 @@ export const data = {
           students: [
             "AGO2023"
           ],
-          time: "10:15 - 11:05",
+          time: "09:25 - 10:15",
           color: ""
         },
         {
@@ -66,7 +66,7 @@ export const data = {
       dayClasses: [
         {
           subject: "Química III",
-          size: 2,
+          size: 3,
           teachers: [
             "Cosme Oliveira da Silva"
           ],
@@ -74,7 +74,20 @@ export const data = {
           students: [
             "AGO2022"
           ],
-          time: "08:20 - 09:10",
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Química II",
+          size: 2,
+          teachers: [
+            "Cosme Oliveira da Silva"
+          ],
+          classroom: "Sala 6-2",
+          students: [
+            "AGO2023"
+          ],
+          time: "10:15 - 11:05",
           color: ""
         },
         {
