--- a/docs/professor/jair_fajardo_junior.mdx
+++ b/docs/professor/jair_fajardo_junior.mdx
@@ -47,6 +47,19 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
+          subject: "Elementos de Automação",
+          size: 2,
+          teachers: [
+            "Jair Fajardo Junior"
+          ],
+          classroom: "Laboratório de Automação e Robótica Industrial",
+          students: [
+            "EIN2022"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
           subject: "Sistemas Digitais",
           size: 2,
           teachers: [
