--- a/docs/professor/kleber_augusto_michalichem.mdx
+++ b/docs/professor/kleber_augusto_michalichem.mdx
@@ -17,7 +17,7 @@ export const data = {
           students: [
             "IIW2024B"
           ],
-          time: "10:15 - 11:05",
+          time: "07:30 - 08:20",
           color: ""
         },
         {
@@ -53,7 +53,7 @@ export const data = {
         },
         {
           subject: "Educação Física 3",
-          size: 1,
+          size: 2,
           teachers: [
             "Kleber Augusto Michalichem"
           ],
@@ -208,7 +208,21 @@ export const data = {
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Educação Física II",
+          size: 3,
+          teachers: [
+            "Kleber Augusto Michalichem"
+          ],
+          classroom: "Sala 02 - CR Toledo",
+          students: [
+            "IIW2023B"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        }
+      ]
     }
   ],
   time: [
