--- a/docs/professor/sabrina_kerkhoff.mdx
+++ b/docs/professor/sabrina_kerkhoff.mdx
@@ -13,7 +13,7 @@ export const data = {
       dayClasses: [
         {
           subject: "Química 2",
-          size: 3,
+          size: 2,
           teachers: [
             "Sabrina Kerkhoff"
           ],
@@ -21,7 +21,7 @@ export const data = {
           students: [
             "EIN2023"
           ],
-          time: "09:25 - 10:15",
+          time: "10:15 - 11:05",
           color: ""
         },
         {
@@ -75,7 +75,7 @@ export const data = {
       dayClasses: [
         {
           subject: "Química 4",
-          size: 4,
+          size: 2,
           teachers: [
             "Sabrina Kerkhoff"
           ],
@@ -84,6 +84,19 @@ export const data = {
             "EIN2021"
           ],
           time: "08:20 - 09:10",
+          color: ""
+        },
+        {
+          subject: "Química 4",
+          size: 2,
+          teachers: [
+            "Sabrina Kerkhoff"
+          ],
+          classroom: "Laboratório de Química",
+          students: [
+            "EIN2021"
+          ],
+          time: "10:15 - 11:05",
           color: ""
         },
         {
