--- a/docs/sala/bloco_1/laboratorio_de_quimica.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_quimica.mdx
@@ -16,7 +16,7 @@ export const data = {
       dayClasses: [
         {
           subject: "Química I",
-          size: 2,
+          size: 3,
           teachers: [
             "Cosme Oliveira da Silva"
           ],
@@ -29,7 +29,7 @@ export const data = {
         },
         {
           subject: "Química 2",
-          size: 3,
+          size: 2,
           teachers: [
             "Sabrina Kerkhoff"
           ],
@@ -37,7 +37,7 @@ export const data = {
           students: [
             "EIN2023"
           ],
-          time: "09:25 - 10:15",
+          time: "10:15 - 11:05",
           color: ""
         },
         {
@@ -91,7 +91,7 @@ export const data = {
       dayClasses: [
         {
           subject: "Química 4",
-          size: 4,
+          size: 2,
           teachers: [
             "Sabrina Kerkhoff"
           ],
@@ -101,6 +101,19 @@ export const data = {
           ],
           time: "08:20 - 09:10",
           color: ""
+        },
+        {
+          subject: "Química 4",
+          size: 2,
+          teachers: [
+            "Sabrina Kerkhoff"
+          ],
+          classroom: "Laboratório de Química",
+          students: [
+            "EIN2021"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
         }
       ]
     },
@@ -109,7 +122,7 @@ export const data = {
       dayClasses: [
         {
           subject: "Química III",
-          size: 2,
+          size: 3,
           teachers: [
             "Cosme Oliveira da Silva"
           ],
@@ -117,7 +130,7 @@ export const data = {
           students: [
             "AGO2022"
           ],
-          time: "08:20 - 09:10",
+          time: "07:30 - 08:20",
           color: ""
         },
         {
