--- a/docs/sala/bloco_2/sala_6-2.mdx
+++ b/docs/sala/bloco_2/sala_6-2.mdx
@@ -28,6 +28,19 @@ export const data = {
           color: ""
         },
         {
+          subject: "Língua Portuguesa e Literatura II",
+          size: 2,
+          teachers: [
+            "Michelli Cristina Galli"
+          ],
+          classroom: "Sala 6-2",
+          students: [
+            "AGO2023"
+          ],
+          time: "13:10 - 14:00",
+          color: ""
+        },
+        {
           subject: "História I",
           size: 2,
           teachers: [
@@ -86,12 +99,12 @@ export const data = {
           students: [
             "AGO2023"
           ],
-          time: "08:20 - 09:10",
+          time: "07:30 - 08:20",
           color: ""
         },
         {
           subject: "Química II",
-          size: 2,
+          size: 3,
           teachers: [
             "Cosme Oliveira da Silva"
           ],
@@ -99,7 +112,7 @@ export const data = {
           students: [
             "AGO2023"
           ],
-          time: "10:15 - 11:05",
+          time: "09:25 - 10:15",
           color: ""
         },
         {
@@ -122,7 +135,7 @@ export const data = {
       dayClasses: [
         {
           subject: "Língua Portuguesa e Literatura II",
-          size: 2,
+          size: 3,
           teachers: [
             "Michelli Cristina Galli"
           ],
@@ -130,7 +143,20 @@ export const data = {
           students: [
             "AGO2023"
           ],
-          time: "09:25 - 10:15",
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Química II",
+          size: 2,
+          teachers: [
+            "Cosme Oliveira da Silva"
+          ],
+          classroom: "Sala 6-2",
+          students: [
+            "AGO2023"
+          ],
+          time: "10:15 - 11:05",
           color: ""
         },
         {
