--- a/docs/sala/bloco_4/laboratorio_de_eletricidade_e_eletronica_b4.mdx
+++ b/docs/sala/bloco_4/laboratorio_de_eletricidade_e_eletronica_b4.mdx
@@ -15,6 +15,19 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
+          subject: "Eletrônica",
+          size: 3,
+          teachers: [
+            "Juliano da Rocha Queiroz"
+          ],
+          classroom: "Laboratório de Eletricidade e Eletrônica B4",
+          students: [
+            "EIN2023"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
           subject: "Instrumentos de Medidas Elétricas",
           size: 2,
           teachers: [
