--- a/docs/sala/bloco_cr_ifpr-biopark/sala_01_-_cr_toledo.mdx
+++ b/docs/sala/bloco_cr_ifpr-biopark/sala_01_-_cr_toledo.mdx
@@ -11,19 +11,6 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Física I",
-          size: 2,
-          teachers: [
-            "Thais Cristina dos Santos"
-          ],
-          classroom: "Sala 01 - CR Toledo",
-          students: [
-            "IIW2024B"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
           subject: "Educação Física I",
           size: 2,
           teachers: [
@@ -33,20 +20,20 @@ export const data = {
           students: [
             "IIW2024B"
           ],
-          time: "10:15 - 11:05",
+          time: "07:30 - 08:20",
           color: ""
         },
         {
-          subject: "História I",
-          size: 1,
+          subject: "Física I",
+          size: 3,
           teachers: [
-            "Jael dos Santos"
+            "Thais Cristina dos Santos"
           ],
           classroom: "Sala 01 - CR Toledo",
           students: [
             "IIW2024B"
           ],
-          time: "13:10 - 14:00",
+          time: "09:25 - 10:15",
           color: ""
         },
         {
@@ -81,6 +68,19 @@ export const data = {
           color: ""
         },
         {
+          subject: "Filosofia I",
+          size: 1,
+          teachers: [
+            "Fabio Antônio da Silva"
+          ],
+          classroom: "Sala 01 - CR Toledo",
+          students: [
+            "IIW2024B"
+          ],
+          time: "09:25 - 10:15",
+          color: ""
+        },
+        {
           subject: "Sociologia I",
           size: 2,
           teachers: [
@@ -90,7 +90,7 @@ export const data = {
           students: [
             "IIW2024B"
           ],
-          time: "11:05 - 11:55",
+          time: "13:10 - 14:00",
           color: ""
         },
         {
@@ -103,20 +103,7 @@ export const data = {
           students: [
             "IIW2024B"
           ],
-          time: "14:00 - 14:50",
-          color: ""
-        },
-        {
-          subject: "Filosofia I",
-          size: 1,
-          teachers: [
-            "Fabio Antônio da Silva"
-          ],
-          classroom: "Sala 01 - CR Toledo",
-          students: [
-            "IIW2024B"
-          ],
-          time: "15:55 - 16:45",
+          time: "15:05 - 15:55",
           color: ""
         }
       ]
@@ -124,6 +111,19 @@ export const data = {
     {
       dayName: "Quarta-Feira",
       dayClasses: [
+        {
+          subject: "História I",
+          size: 1,
+          teachers: [
+            "Jael dos Santos"
+          ],
+          classroom: "Sala 01 - CR Toledo",
+          students: [
+            "IIW2024B"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
         {
           subject: "Matemática I",
           size: 2,
@@ -154,11 +154,39 @@ export const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "História I",
+          size: 1,
+          teachers: [
+            "Jael dos Santos"
+          ],
+          classroom: "Sala 01 - CR Toledo",
+          students: [
+            "IIW2024B"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "História I",
+          size: 1,
+          teachers: [
+            "Jael dos Santos"
+          ],
+          classroom: "Sala 01 - CR Toledo",
+          students: [
+            "IIW2024B"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        }
+      ]
     }
   ],
   time: [
