--- a/docs/turma/ein/ein2021.mdx
+++ b/docs/turma/ein/ein2021.mdx
@@ -60,7 +60,7 @@ export const data = {
       dayClasses: [
         {
           subject: "Biologia 4",
-          size: 2,
+          size: 3,
           teachers: [
             "Leandro Luiz Borges"
           ],
@@ -91,7 +91,7 @@ export const data = {
       dayClasses: [
         {
           subject: "Química 4",
-          size: 4,
+          size: 2,
           teachers: [
             "Sabrina Kerkhoff"
           ],
@@ -101,12 +101,38 @@ export const data = {
           ],
           time: "08:20 - 09:10",
           color: ""
+        },
+        {
+          subject: "Química 4",
+          size: 2,
+          teachers: [
+            "Sabrina Kerkhoff"
+          ],
+          classroom: "Laboratório de Química",
+          students: [
+            "EIN2021"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
         }
       ]
     },
     {
       dayName: "Sexta-Feira",
       dayClasses: [
+        {
+          subject: "Física 4",
+          size: 3,
+          teachers: [
+            "Thais Cristina dos Santos"
+          ],
+          classroom: "Laboratório de Física",
+          students: [
+            "EIN2021"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
         {
           subject: "Geografia 4",
           size: 2,
