--- a/docs/turma/ein/ein2022.mdx
+++ b/docs/turma/ein/ein2022.mdx
@@ -28,10 +28,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Segurança do Trabalho",
+          subject: "História 3",
           size: 1,
           teachers: [
-            "Danilo Hungaro Micheletti"
+            "Suzane Conceição Pantolfi Tostes"
           ],
           classroom: "Sala 12-2",
           students: [
@@ -42,7 +42,7 @@ export const data = {
         },
         {
           subject: "Educação Física 3",
-          size: 1,
+          size: 2,
           teachers: [
             "Kleber Augusto Michalichem"
           ],
@@ -51,19 +51,6 @@ export const data = {
             "EIN2022"
           ],
           time: "09:25 - 10:15",
-          color: ""
-        },
-        {
-          subject: "História 3",
-          size: 1,
-          teachers: [
-            "Suzane Conceição Pantolfi Tostes"
-          ],
-          classroom: "Sala 12-2",
-          students: [
-            "EIN2022"
-          ],
-          time: "10:15 - 11:05",
           color: ""
         },
         {
@@ -129,16 +116,16 @@ export const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Geografia 3",
-          size: 1,
+          subject: "Elementos de Automação",
+          size: 2,
           teachers: [
-            "Alexandre Roberto Valcarenghi"
+            "Jair Fajardo Junior"
           ],
-          classroom: "Sala 12-2",
+          classroom: "Laboratório de Automação e Robótica Industrial",
           students: [
             "EIN2022"
           ],
-          time: "08:20 - 09:10",
+          time: "07:30 - 08:20",
           color: ""
         },
         {
@@ -153,12 +140,38 @@ export const data = {
           ],
           time: "09:25 - 10:15",
           color: ""
+        },
+        {
+          subject: "Geografia 3",
+          size: 1,
+          teachers: [
+            "Alexandre Roberto Valcarenghi"
+          ],
+          classroom: "Sala 12-2",
+          students: [
+            "EIN2022"
+          ],
+          time: "11:05 - 11:55",
+          color: ""
         }
       ]
     },
     {
       dayName: "Sexta-Feira",
       dayClasses: [
+        {
+          subject: "Segurança do Trabalho",
+          size: 2,
+          teachers: [
+            "Danilo Hungaro Micheletti"
+          ],
+          classroom: "Sala 12-2",
+          students: [
+            "EIN2022"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
         {
           subject: "Lingua Estrangeira Moderna 2 - Ingles",
           size: 1,
@@ -169,7 +182,7 @@ export const data = {
           students: [
             "EIN2022"
           ],
-          time: "08:20 - 09:10",
+          time: "09:25 - 10:15",
           color: ""
         },
         {
