--- a/docs/turma/iiw/iiw2022b.mdx
+++ b/docs/turma/iiw/iiw2022b.mdx
@@ -11,19 +11,6 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "História III",
-          size: 3,
-          teachers: [
-            "Jael dos Santos"
-          ],
-          classroom: "Sala 03 - CR Toledo",
-          students: [
-            "IIW2022B"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
           subject: "Física III",
           size: 2,
           teachers: [
@@ -33,7 +20,20 @@ export const data = {
           students: [
             "IIW2022B"
           ],
-          time: "10:15 - 11:05",
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "História III",
+          size: 3,
+          teachers: [
+            "Jael dos Santos"
+          ],
+          classroom: "Sala 03 - CR Toledo",
+          students: [
+            "IIW2022B"
+          ],
+          time: "09:25 - 10:15",
           color: ""
         }
       ]
@@ -94,10 +94,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Geografia II",
-          size: 1,
+          subject: "Biologia III",
+          size: 2,
           teachers: [
-            "Renato Lada Guerreiro"
+            "Leandro Luiz Borges"
           ],
           classroom: "Sala 03 - CR Toledo",
           students: [
@@ -113,7 +113,7 @@ export const data = {
       dayClasses: [
         {
           subject: "Sociologia II",
-          size: 1,
+          size: 3,
           teachers: [
             "Fabio Antônio da Silva"
           ],
@@ -125,16 +125,16 @@ export const data = {
           color: ""
         },
         {
-          subject: "Sociologia II",
+          subject: "Geografia II",
           size: 1,
           teachers: [
-            "Fabio Antônio da Silva"
+            "Renato Lada Guerreiro"
           ],
           classroom: "Sala 03 - CR Toledo",
           students: [
             "IIW2022B"
           ],
-          time: "08:20 - 09:10",
+          time: "10:15 - 11:05",
           color: ""
         },
         {
