--- a/docs/turma/iiw/iiw2023b.mdx
+++ b/docs/turma/iiw/iiw2023b.mdx
@@ -11,10 +11,10 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Filosofia II",
+          subject: "História II",
           size: 1,
           teachers: [
-            "Fabio Antônio da Silva"
+            "Jael dos Santos"
           ],
           classroom: "Sala 02 - CR Toledo",
           students: [
@@ -81,6 +81,19 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
+          subject: "Filosofia II",
+          size: 1,
+          teachers: [
+            "Fabio Antônio da Silva"
+          ],
+          classroom: "Sala 02 - CR Toledo",
+          students: [
+            "IIW2023B"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
           subject: "Geografia I",
           size: 1,
           teachers: [
@@ -94,19 +107,6 @@ export const data = {
           color: ""
         },
         {
-          subject: "Biologia II",
-          size: 2,
-          teachers: [
-            "Eliana Peliçon Pereira Figueira"
-          ],
-          classroom: "Sala 02 - CR Toledo",
-          students: [
-            "IIW2023B"
-          ],
-          time: "09:25 - 10:15",
-          color: ""
-        },
-        {
           subject: "Geografia I",
           size: 1,
           teachers: [
@@ -116,20 +116,20 @@ export const data = {
           students: [
             "IIW2023B"
           ],
-          time: "11:05 - 11:55",
+          time: "09:25 - 10:15",
           color: ""
         },
         {
-          subject: "História II",
-          size: 1,
+          subject: "Biologia II",
+          size: 2,
           teachers: [
-            "Jael dos Santos"
+            "Eliana Peliçon Pereira Figueira"
           ],
           classroom: "Sala 02 - CR Toledo",
           students: [
             "IIW2023B"
           ],
-          time: "14:00 - 14:50",
+          time: "10:15 - 11:05",
           color: ""
         },
         {
@@ -161,6 +161,19 @@ export const data = {
             "IIW2023B"
           ],
           time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Geografia I",
+          size: 1,
+          teachers: [
+            "Renato Lada Guerreiro"
+          ],
+          classroom: "Sala 02 - CR Toledo",
+          students: [
+            "IIW2023B"
+          ],
+          time: "09:25 - 10:15",
           color: ""
         },
         {
@@ -209,7 +222,7 @@ export const data = {
         },
         {
           subject: "História II",
-          size: 1,
+          size: 2,
           teachers: [
             "Jael dos Santos"
           ],
@@ -217,7 +230,7 @@ export const data = {
           students: [
             "IIW2023B"
           ],
-          time: "11:05 - 11:55",
+          time: "10:15 - 11:05",
           color: ""
         }
       ]
@@ -226,8 +239,21 @@ export const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
+          subject: "Educação Física II",
+          size: 3,
+          teachers: [
+            "Kleber Augusto Michalichem"
+          ],
+          classroom: "Sala 02 - CR Toledo",
+          students: [
+            "IIW2023B"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
           subject: "História II",
-          size: 1,
+          size: 2,
           teachers: [
             "Jael dos Santos"
           ],
