--- a/docs/sala/bloco_2/sala_7-2.mdx
+++ b/docs/sala/bloco_2/sala_7-2.mdx
@@ -147,6 +147,19 @@ export const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
+          subject: "Física I",
+          size: 3,
+          teachers: [
+            "Alex Soares de Brito"
+          ],
+          classroom: "Sala 7-2",
+          students: [
+            "AGO2024"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
           subject: "Política educacional: organização da educação brasileira",
           size: 4,
           teachers: [
