--- a/versioned_docs/version-2024.1.9/professor/alex_soares_de_brito.mdx
+++ b/versioned_docs/version-2024.1.9/professor/alex_soares_de_brito.mdx
@@ -85,25 +85,26 @@ export const data = {
           ],
           time: "07:30 - 08:20",
           color: ""
-        },
+        }
+      ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: [
         {
           subject: "Física I",
           size: 3,
           teachers: [
             "Alex Soares de Brito"
           ],
-          classroom: "Laboratório de Física",
+          classroom: "Sala 7-2",
           students: [
             "AGO2024"
           ],
-          time: "11:05 - 11:55",
+          time: "07:30 - 08:20",
           color: ""
         }
       ]
-    },
-    {
-      dayName: "Sexta-Feira",
-      dayClasses: []
     }
   ],
   time: [
