--- a/versioned_docs/version-2024.1.9/sala/bloco_1/laboratorio_de_informatica_a.mdx
+++ b/versioned_docs/version-2024.1.9/sala/bloco_1/laboratorio_de_informatica_a.mdx
@@ -31,21 +31,7 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Projetos Elétricos industriais",
-          size: 4,
-          teachers: [
-            "Danilo Hungaro Micheletti"
-          ],
-          classroom: "Laboratório de Informatica A",
-          students: [
-            "ELE2023"
-          ],
-          time: "19:00 - 19:50",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
