--- a/versioned_docs/version-2024.1.9/sala/bloco_2/sala_11-2.mdx
+++ b/versioned_docs/version-2024.1.9/sala/bloco_2/sala_11-2.mdx
@@ -59,6 +59,19 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
+          subject: "Biologia 4",
+          size: 3,
+          teachers: [
+            "Leandro Luiz Borges"
+          ],
+          classroom: "Sala 11-2",
+          students: [
+            "EIN2021"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
           subject: "História 4",
           size: 2,
           teachers: [
