--- a/versioned_docs/version-2024.1.9/turma/ago/ago2024.mdx
+++ b/versioned_docs/version-2024.1.9/turma/ago/ago2024.mdx
@@ -127,25 +127,25 @@ export const data = {
           ],
           time: "09:25 - 10:15",
           color: ""
-        },
-        {
-          subject: "Física I",
-          size: 3,
-          teachers: [
-            "Alex Soares de Brito"
-          ],
-          classroom: "Laboratório de Física",
-          students: [
-            "AGO2024"
-          ],
-          time: "11:05 - 11:55",
-          color: ""
         }
       ]
     },
     {
       dayName: "Sexta-Feira",
       dayClasses: [
+        {
+          subject: "Física I",
+          size: 3,
+          teachers: [
+            "Alex Soares de Brito"
+          ],
+          classroom: "Sala 7-2",
+          students: [
+            "AGO2024"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
         {
           subject: "Biologia I",
           size: 2,
