--- a/versioned_docs/version-2024.1.9/turma/ein/ein2021.mdx
+++ b/versioned_docs/version-2024.1.9/turma/ein/ein2021.mdx
@@ -64,7 +64,7 @@ export const data = {
           teachers: [
             "Leandro Luiz Borges"
           ],
-          classroom: "Laboratório de Biologia",
+          classroom: "Sala 11-2",
           students: [
             "EIN2021"
           ],
