--- a/docs/sala/bloco_2/sala_7-2.mdx
+++ b/docs/sala/bloco_2/sala_7-2.mdx
@@ -129,6 +129,19 @@ export const data = {
           color: ""
         },
         {
+          subject: "Matemática I",
+          size: 1,
+          teachers: [
+            "Elenice Josefa Kolancko Setti"
+          ],
+          classroom: "Sala 7-2",
+          students: [
+            "AGO2024"
+          ],
+          time: "11:05 - 11:55",
+          color: ""
+        },
+        {
           subject: "Metodologia da pesquisa",
           size: 4,
           teachers: [
