--- a/docs/professor/danilo_hungaro_micheletti.mdx
+++ b/docs/professor/danilo_hungaro_micheletti.mdx
@@ -35,7 +35,7 @@ export const data = {
           teachers: [
             "Danilo Hungaro Micheletti"
           ],
-          classroom: "Laboratório de Informatica C",
+          classroom: "Laboratório de Informatica A",
           students: [
             "ELE2023"
           ],
