--- a/docs/professor/elenice_josefa_kolancko_setti.mdx
+++ b/docs/professor/elenice_josefa_kolancko_setti.mdx
@@ -98,6 +98,19 @@ export const data = {
           ],
           time: "07:30 - 08:20",
           color: ""
+        },
+        {
+          subject: "Matemática I",
+          size: 1,
+          teachers: [
+            "Elenice Josefa Kolancko Setti"
+          ],
+          classroom: "Sala 7-2",
+          students: [
+            "AGO2024"
+          ],
+          time: "11:05 - 11:55",
+          color: ""
         }
       ]
     },
