--- a/docs/turma/ago/ago2024.mdx
+++ b/docs/turma/ago/ago2024.mdx
@@ -127,6 +127,19 @@ export const data = {
           ],
           time: "09:25 - 10:15",
           color: ""
+        },
+        {
+          subject: "Matemática I",
+          size: 1,
+          teachers: [
+            "Elenice Josefa Kolancko Setti"
+          ],
+          classroom: "Sala 7-2",
+          students: [
+            "AGO2024"
+          ],
+          time: "11:05 - 11:55",
+          color: ""
         }
       ]
     },
