--- a/docs/turma/ein/ein2021.mdx
+++ b/docs/turma/ein/ein2021.mdx
@@ -64,7 +64,7 @@ export const data = {
           teachers: [
             "Leandro Luiz Borges"
           ],
-          classroom: "Sala 11-2",
+          classroom: "Laboratório de Biologia",
           students: [
             "EIN2021"
           ],
