--- a/versioned_docs/version-2024.1.9/professor/leandro_luiz_borges.mdx
+++ b/versioned_docs/version-2024.1.9/professor/leandro_luiz_borges.mdx
@@ -48,7 +48,7 @@ export const data = {
           teachers: [
             "Leandro Luiz Borges"
           ],
-          classroom: "Sala 11-2",
+          classroom: "Laboratório de Biologia",
           students: [
             "EIN2021"
           ],
