--- a/versioned_docs/version-2024.1.9/turma/ele/ele2023.mdx
+++ b/versioned_docs/version-2024.1.9/turma/ele/ele2023.mdx
@@ -38,7 +38,7 @@ export const data = {
           teachers: [
             "Danilo Hungaro Micheletti"
           ],
-          classroom: "Laboratório de Informatica C",
+          classroom: "Laboratório de Informatica A",
           students: [
             "ELE2023"
           ],
