--- a/versioned_docs/version-2024.1.11/professor/elias_franco.mdx
+++ b/versioned_docs/version-2024.1.11/professor/elias_franco.mdx
@@ -25,7 +25,7 @@ export const data = {
           color: ""
         },
         {
-          subject: "Sistemas Agroflorestais",
+          subject: "Construções e Instalações Rurais",
           size: 2,
           teachers: [
             "Elias Franco"
@@ -118,12 +118,12 @@ export const data = {
           color: ""
         },
         {
-          subject: "Construções e Instalações Rurais",
+          subject: "Sistemas Agroflorestais",
           size: 2,
           teachers: [
             "Elias Franco"
           ],
-          classroom: "Sala 6-2",
+          classroom: "Laboratório de Informatica C",
           students: [
             "AGO2023"
           ],
