--- a/versioned_docs/version-2024.1.11/sala/bloco_2/laboratorio_de_informatica_c.mdx
+++ b/versioned_docs/version-2024.1.11/sala/bloco_2/laboratorio_de_informatica_c.mdx
@@ -134,6 +134,19 @@ export const data = {
           color: ""
         },
         {
+          subject: "Sistemas Agroflorestais",
+          size: 2,
+          teachers: [
+            "Elias Franco"
+          ],
+          classroom: "Laboratório de Informatica C",
+          students: [
+            "AGO2023"
+          ],
+          time: "15:05 - 15:55",
+          color: ""
+        },
+        {
           subject: "Trabalho de conclusão de curso II",
           size: 1,
           teachers: [
