--- a/docs/professor/jose_provetti_junior.mdx
+++ b/docs/professor/jose_provetti_junior.mdx
@@ -99,10 +99,6 @@ export const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Sexta-Feira",
       dayClasses: [
         {
           subject: "Filosofia II",
@@ -116,7 +112,12 @@ export const data = {
           ],
           time: "09:25 - 10:15",
           color: ""
-        },
+        }
+      ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: [
         {
           subject: "Filosofia II",
           size: 2,
