--- a/versioned_docs/version-2024.1.11/professor/elenice_josefa_kolancko_setti.mdx
+++ b/versioned_docs/version-2024.1.11/professor/elenice_josefa_kolancko_setti.mdx
@@ -13,7 +13,7 @@ export const data = {
       dayClasses: [
         {
           subject: "Matemática II",
-          size: 2,
+          size: 1,
           teachers: [
             "Elenice Josefa Kolancko Setti"
           ],
@@ -22,6 +22,19 @@ export const data = {
             "IIW2023A"
           ],
           time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Matemática I",
+          size: 2,
+          teachers: [
+            "Elenice Josefa Kolancko Setti"
+          ],
+          classroom: "Sala 16-2",
+          students: [
+            "IIW2024A"
+          ],
+          time: "08:20 - 09:10",
           color: ""
         },
         {
@@ -54,21 +67,7 @@ export const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Matemática I",
-          size: 2,
-          teachers: [
-            "Elenice Josefa Kolancko Setti"
-          ],
-          classroom: "Sala 16-2",
-          students: [
-            "IIW2024A"
-          ],
-          time: "08:20 - 09:10",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
@@ -106,7 +105,7 @@ export const data = {
         },
         {
           subject: "Matemática II",
-          size: 2,
+          size: 3,
           teachers: [
             "Elenice Josefa Kolancko Setti"
           ],
@@ -114,7 +113,7 @@ export const data = {
           students: [
             "IIW2023A"
           ],
-          time: "10:15 - 11:05",
+          time: "09:25 - 10:15",
           color: ""
         }
       ]
