--- a/versioned_docs/version-2024.1.11/professor/jael_dos_santos.mdx
+++ b/versioned_docs/version-2024.1.11/professor/jael_dos_santos.mdx
@@ -34,6 +34,19 @@ export const data = {
           students: [
             "IIW2023A"
           ],
+          time: "08:20 - 09:10",
+          color: ""
+        },
+        {
+          subject: "História II",
+          size: 1,
+          teachers: [
+            "Jael dos Santos"
+          ],
+          classroom: "Sala 15-2",
+          students: [
+            "IIW2023A"
+          ],
           time: "09:25 - 10:15",
           color: ""
         },
@@ -85,21 +98,7 @@ export const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "História II",
-          size: 1,
-          teachers: [
-            "Jael dos Santos"
-          ],
-          classroom: "Sala 15-2",
-          students: [
-            "IIW2023A"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
