--- a/versioned_docs/version-2024.1.11/professor/thais_cristina_dos_santos.mdx
+++ b/versioned_docs/version-2024.1.11/professor/thais_cristina_dos_santos.mdx
@@ -74,7 +74,7 @@ export const data = {
           teachers: [
             "Thais Cristina dos Santos"
           ],
-          classroom: "Laboratório de Física",
+          classroom: "Sala 9-2",
           students: [
             "COM2024"
           ],
