--- a/versioned_docs/version-2024.1.11/sala/bloco_2/sala_9-2.mdx
+++ b/versioned_docs/version-2024.1.11/sala/bloco_2/sala_9-2.mdx
@@ -164,6 +164,19 @@ export const data = {
           color: ""
         },
         {
+          subject: "Física I",
+          size: 2,
+          teachers: [
+            "Thais Cristina dos Santos"
+          ],
+          classroom: "Sala 9-2",
+          students: [
+            "COM2024"
+          ],
+          time: "08:20 - 09:10",
+          color: ""
+        },
+        {
           subject: "Língua Portuguesa e Literatura I",
           size: 2,
           teachers: [
