--- a/versioned_docs/version-2024.1.11/turma/com/com2024.mdx
+++ b/versioned_docs/version-2024.1.11/turma/com/com2024.mdx
@@ -156,7 +156,7 @@ export const data = {
           teachers: [
             "Thais Cristina dos Santos"
           ],
-          classroom: "Laboratório de Física",
+          classroom: "Sala 9-2",
           students: [
             "COM2024"
           ],
