--- a/docs/professor/alexandre_rodrigues_monge.mdx
+++ b/docs/professor/alexandre_rodrigues_monge.mdx
@@ -17,7 +17,7 @@ export const data = {
           teachers: [
             "Alexandre Rodrigues Monge"
           ],
-          classroom: "Laboratório de Informatica B",
+          classroom: "Laboratório de Informatica A",
           students: [
             "IIW2023A"
           ],
