--- a/docs/sala/bloco_2/laboratorio_de_informatica_c.mdx
+++ b/docs/sala/bloco_2/laboratorio_de_informatica_c.mdx
@@ -86,6 +86,19 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
+          subject: "Projetos e Instalações Elétricas",
+          size: 2,
+          teachers: [
+            "Danilo Hungaro Micheletti"
+          ],
+          classroom: "Laboratório de Informatica C",
+          students: [
+            "EIN2022"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        },
+        {
           subject: "Estágio curricular supervisionado em biologia II",
           size: 2,
           teachers: [
