--- a/docs/turma/ein/ein2022.mdx
+++ b/docs/turma/ein/ein2022.mdx
@@ -156,7 +156,7 @@ export const data = {
           teachers: [
             "Danilo Hungaro Micheletti"
           ],
-          classroom: "Sala 12-2",
+          classroom: "Laboratório de Informatica C",
           students: [
             "EIN2022"
           ],
