--- a/docs/turma/iiw/iiw2024a.mdx
+++ b/docs/turma/iiw/iiw2024a.mdx
@@ -125,7 +125,7 @@ export const data = {
           teachers: [
             "Joaquim José Honório de Lima"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Laboratório de Informatica B",
           students: [
             "IIW2024A"
           ],
@@ -195,7 +195,7 @@ export const data = {
           teachers: [
             "Joaquim José Honório de Lima"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Laboratório de Informatica B",
           students: [
             "IIW2024A"
           ],
