--- a/docs/professor/joaquim_jose_honorio_de_lima.mdx
+++ b/docs/professor/joaquim_jose_honorio_de_lima.mdx
@@ -17,7 +17,7 @@ export const data = {
           teachers: [
             "Joaquim José Honório de Lima"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Laboratório de Informatica B",
           students: [
             "IIW2024A"
           ],
@@ -35,7 +35,7 @@ export const data = {
           teachers: [
             "Joaquim José Honório de Lima"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Laboratório de Informatica B",
           students: [
             "IIW2024A"
           ],
