--- a/docs/sala/bloco_1/laboratorio_de_informatica_a.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_informatica_a.mdx
@@ -29,14 +29,14 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Linguagens de apresentação e estruturação de conteúdos",
+          subject: "Laboratório de Banco de Dados",
           size: 2,
           teachers: [
-            "Joaquim José Honório de Lima"
+            "Alexandre Rodrigues Monge"
           ],
           classroom: "Laboratório de Informatica A",
           students: [
-            "IIW2024A"
+            "IIW2023A"
           ],
           time: "10:15 - 11:05",
           color: ""
@@ -70,19 +70,6 @@ export const data = {
             "AGO2022"
           ],
           time: "07:30 - 08:20",
-          color: ""
-        },
-        {
-          subject: "Linguagens de apresentação e estruturação de conteúdos",
-          size: 2,
-          teachers: [
-            "Joaquim José Honório de Lima"
-          ],
-          classroom: "Laboratório de Informatica A",
-          students: [
-            "IIW2024A"
-          ],
-          time: "10:15 - 11:05",
           color: ""
         },
         {
@@ -153,19 +140,6 @@ export const data = {
             "TADS_ESP"
           ],
           time: "19:00 - 19:50",
-          color: ""
-        },
-        {
-          subject: "Introdução à Programação Web",
-          size: 2,
-          teachers: [
-            "Douglas Barbosa Sousa"
-          ],
-          classroom: "Laboratório de Informatica A",
-          students: [
-            "TADS_ESP"
-          ],
-          time: "21:00 - 21:50",
           color: ""
         }
       ]
