--- a/docs/sala/bloco_1/laboratorio_de_informatica_b.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_informatica_b.mdx
@@ -29,14 +29,14 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Laboratório de Banco de Dados",
+          subject: "Linguagens de apresentação e estruturação de conteúdos",
           size: 2,
           teachers: [
-            "Alexandre Rodrigues Monge"
+            "Joaquim José Honório de Lima"
           ],
           classroom: "Laboratório de Informatica B",
           students: [
-            "IIW2023A"
+            "IIW2024A"
           ],
           time: "10:15 - 11:05",
           color: ""
@@ -83,6 +83,19 @@ export const data = {
             "IIW2023A"
           ],
           time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Linguagens de apresentação e estruturação de conteúdos",
+          size: 2,
+          teachers: [
+            "Joaquim José Honório de Lima"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "IIW2024A"
+          ],
+          time: "10:15 - 11:05",
           color: ""
         },
         {
