--- a/docs/sala/bloco_2/sala_7-2.mdx
+++ b/docs/sala/bloco_2/sala_7-2.mdx
@@ -48,6 +48,32 @@ export const data = {
           ],
           time: "10:15 - 11:05",
           color: ""
+        },
+        {
+          subject: "Zoologia dos invertebrados I",
+          size: 2,
+          teachers: [
+            "Karina Dias Espartosa"
+          ],
+          classroom: "Sala 7-2",
+          students: [
+            "BIO_ESPECIAL_1 - Modulo 2"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Zoologia dos invertebrados I",
+          size: 2,
+          teachers: [
+            "Karina Dias Espartosa"
+          ],
+          classroom: "Sala 7-2",
+          students: [
+            "BIO_ESPECIAL_1 - Modulo 2"
+          ],
+          time: "21:00 - 21:50",
+          color: ""
         }
       ]
     },
@@ -187,6 +213,32 @@ export const data = {
             "AGO2024"
           ],
           time: "10:15 - 11:05",
+          color: ""
+        },
+        {
+          subject: "Zoologia dos invertebrados I",
+          size: 2,
+          teachers: [
+            "Karina Dias Espartosa"
+          ],
+          classroom: "Sala 7-2",
+          students: [
+            "BIO_ESPECIAL_1 - Modulo 2"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Zoologia dos invertebrados I",
+          size: 2,
+          teachers: [
+            "Karina Dias Espartosa"
+          ],
+          classroom: "Sala 7-2",
+          students: [
+            "BIO_ESPECIAL_1 - Modulo 2"
+          ],
+          time: "21:00 - 21:50",
           color: ""
         }
       ]
