--- a/docs/sala/bloco_2/sala_8-2.mdx
+++ b/docs/sala/bloco_2/sala_8-2.mdx
@@ -118,6 +118,32 @@ export const data = {
           ],
           time: "15:55 - 16:45",
           color: ""
+        },
+        {
+          subject: "Zoologia dos invertebrados II",
+          size: 2,
+          teachers: [
+            "Karina Dias Espartosa"
+          ],
+          classroom: "Sala 8-2",
+          students: [
+            "BIO_ESPECIAL_2 - Modulo 2"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Zoologia dos invertebrados II",
+          size: 2,
+          teachers: [
+            "Karina Dias Espartosa"
+          ],
+          classroom: "Sala 8-2",
+          students: [
+            "BIO_ESPECIAL_2 - Modulo 2"
+          ],
+          time: "21:00 - 21:50",
+          color: ""
         }
       ]
     },
@@ -205,6 +231,32 @@ export const data = {
             "COM2023"
           ],
           time: "10:15 - 11:05",
+          color: ""
+        },
+        {
+          subject: "Zoologia dos invertebrados II",
+          size: 2,
+          teachers: [
+            "Karina Dias Espartosa"
+          ],
+          classroom: "Sala 8-2",
+          students: [
+            "BIO_ESPECIAL_2 - Modulo 2"
+          ],
+          time: "19:00 - 19:50",
+          color: ""
+        },
+        {
+          subject: "Zoologia dos invertebrados II",
+          size: 2,
+          teachers: [
+            "Karina Dias Espartosa"
+          ],
+          classroom: "Sala 8-2",
+          students: [
+            "BIO_ESPECIAL_2 - Modulo 2"
+          ],
+          time: "21:00 - 21:50",
           color: ""
         }
       ]
