--- a/docs/professor/karina_dias_espartosa.mdx
+++ b/docs/professor/karina_dias_espartosa.mdx
@@ -39,7 +39,7 @@ export const data = {
           teachers: [
             "Karina Dias Espartosa"
           ],
-          classroom: "",
+          classroom: "Sala 7-2",
           students: [
             "BIO_ESPECIAL_1 - Modulo 2"
           ],
@@ -52,7 +52,7 @@ export const data = {
           teachers: [
             "Karina Dias Espartosa"
           ],
-          classroom: "",
+          classroom: "Sala 7-2",
           students: [
             "BIO_ESPECIAL_1 - Modulo 2"
           ],
@@ -83,7 +83,7 @@ export const data = {
           teachers: [
             "Karina Dias Espartosa"
           ],
-          classroom: "",
+          classroom: "Sala 8-2",
           students: [
             "BIO_ESPECIAL_2 - Modulo 2"
           ],
@@ -96,7 +96,7 @@ export const data = {
           teachers: [
             "Karina Dias Espartosa"
           ],
-          classroom: "",
+          classroom: "Sala 8-2",
           students: [
             "BIO_ESPECIAL_2 - Modulo 2"
           ],
@@ -114,7 +114,7 @@ export const data = {
           teachers: [
             "Karina Dias Espartosa"
           ],
-          classroom: "",
+          classroom: "Sala 7-2",
           students: [
             "BIO_ESPECIAL_1 - Modulo 2"
           ],
@@ -127,7 +127,7 @@ export const data = {
           teachers: [
             "Karina Dias Espartosa"
           ],
-          classroom: "",
+          classroom: "Sala 7-2",
           students: [
             "BIO_ESPECIAL_1 - Modulo 2"
           ],
@@ -145,7 +145,7 @@ export const data = {
           teachers: [
             "Karina Dias Espartosa"
           ],
-          classroom: "",
+          classroom: "Sala 8-2",
           students: [
             "BIO_ESPECIAL_2 - Modulo 2"
           ],
@@ -158,7 +158,7 @@ export const data = {
           teachers: [
             "Karina Dias Espartosa"
           ],
-          classroom: "",
+          classroom: "Sala 8-2",
           students: [
             "BIO_ESPECIAL_2 - Modulo 2"
           ],
